fix: 조회 경로 수정